# pong

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SCALING_NOTES.md  index.html  main.bicep  run.sh  styles.css
.github/: copilot-instructions.md
.github/workflows/: main.yml
docs/: DECOUPLING.md  OPTIMIZATION_PLAN.md
src/: game.rs  game_tests.rs  lib.rs  main.rs  server.rs
src/game/: binary.rs  delta.rs  lockfree.rs  mod.rs  physics.rs  spatial.rs  state.rs  types.rs
src/server/: http.rs  metrics.rs  mod.rs  optimized_connection.rs  websocket.rs
static/: index.html
tests/: integration_tests.rs
